fixed posts alignment style

--- a/src/Components/Posts/Posts.module.css
+++ b/src/Components/Posts/Posts.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     gap: 20px;
     width: 65%;
-    margin: 3 auto;
+    margin: 2em auto;
     overflow: none;
     margin-left: auto;
     margin-right: auto;
